# zxing-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  benchmark  global.d.ts  index.html  package.json  pnpm-lock.yaml  test.ts  tsconfig.json  vite.config.js
benchmarks/: benchmark.cpp
scripts/: build.sh  fix_vite_assets_inline.js
src/: index.ts  lum.ts  main.cpp  reader.cpp  reader.ts  stream-reader.ts  utils.ts  wasm.ts  webgpu-reader.ts
src/shaders/: lum-rgba.wgsl
wasm-out/reader/: interface.d.ts  zxing_reader.d.ts  zxing_reader.js  zxing_reader.wasm
